--- a/contac.html
+++ b/contac.html
@@ -7,12 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Hello</h1>
-    <h3>Hello 2</h3>
-    <p> hello 4</p>
-    <p>Hello 5</p>
-
-    
+    <p>xoliqulov alisher</p>
 </body>
 </html>
